# intellij-eta

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  intellij-eta.cabal  package.yaml  settings.gradle
ffigen/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jps-plugin/: build.gradle
jps-shared/: build.gradle
plugin/: .gitignore  build.gradle  package.yaml
plugin/src/main/eta/: P.hs
plugin/src/main/eta/FFI/Javax/Swing/: Icon.hs  JComponent.hs
plugin/src/main/eta/IntelliJ/Plugin/Util/: GuiUtil.hs  ParserBuilder.hs  Wizard.hs
plugin/src/main/eta/P/: Base.hs  Methods.hs
plugin/src/main/eta/P/Methods/: GetProject.hs
plugin/src/main/resources/fileTemplates/internal/: Default Executable Cabal File.cabal.ft  Default Haskell Main File.hs.ft  Default Library Cabal File.cabal.ft  Eta Module.hs.ft
plugin/src/test/eta/: JUnit.hs
plugin/src/test/eta/JUnit/Framework/: TestCase.hs
plugin/src/test/eta/JUnit/Runner/: JUnitCore.hs  Result.hs
plugin/src/test/eta/JUnit/Runner/Notification/: Failure.hs
plugin/src/test/eta/Tests/: EtaSyntaxHighlighterTest.hs
plugin/src/test/resources/fixtures/eta/sources/: Incomplete00001.hs  String00004.hs
src/main/eta/: P.hs
src/main/eta/FFI/Com/IntelliJ/: Psi.hs
src/main/eta/FFI/Com/IntelliJ/Lang/: ASTNode.hs  Language.hs  ParserDefinition.hs  PsiParser.hs
src/main/eta/FFI/Com/IntelliJ/Lexer/: Lexer.hs
src/main/eta/FFI/Com/IntelliJ/Psi/: FileViewProvider.hs  PsiElement.hs  PsiFile.hs  TokenType.hs  Tree.hs
src/main/eta/FFI/Org/JetBrains/JPS/: ModuleChunk.hs
src/main/eta/IntelliJ/Plugin/Eta/Lang/: Utils.hs
src/main/java/com/typelead/intellij/test/: LexerTestCaseWrapper.java
src/main/java/com/typelead/intellij/utils/: JavaUtil.java
src/test/eta/: JUnit.hs  Main.hs  Tests.hs
src/test/eta/IntelliJ/TestFramework/: LexerTestCase.hs  UsefulTestCase.hs  VfsTestUtil.hs
src/test/eta/JUnit/Framework/: TestCase.hs
src/test/eta/JUnit/Runner/: Result.hs
src/test/eta/Tests/: EtaLexerTest.hs  EtaSyntaxHighlighterTest.hs  EtaSyntaxHighlightingLexer.hs  Utils.hs
src/test/eta/Tests/Base/: LexerTestCaseWrapper.hs
src/test/java/com/typelead/intellij/test/: LexerTestCaseWrapper.java  LightPlatformCodeInsightFixtureTestCaseWrapper.java
src/test/resources/fixtures/eta/lexer/expected/: AStack00001.txt  Arrow00001.txt  Case00001.txt  Comment00001.txt  Comment00002.txt  Comment00003.txt  Comment00004.txt  Comment00005.txt  Comment00006.txt  Comment00007.txt  Comment00008.txt  Eta00001.txt  Export00001.txt  FFI00001.txt  FFI00002.txt  ForAll00001.txt  Fun00001.txt  Fun00002.txt  Fun00003.txt  Fun00004.txt  Fun00005.txt  Fun00006.txt  Fun00007.txt  Fun00008.txt  Fun00009.txt  Fun00010.txt  Fun00011.txt  Fun00012.txt  (+76 more)
src/test/resources/fixtures/eta/sources/: AStack00001.hs
tools/: exposed-modules  run-jflex  show-log
(+330 files in other folders)
